done for channel-info and channel-search

--- a/src/app/modules/channel-channelsuggest/channel-channelsuggest.component.html
+++ b/src/app/modules/channel-channelsuggest/channel-channelsuggest.component.html
@@ -1,4 +1,4 @@
-<div class="full-width internalPage  channel-channelsuggestpage">
+<div class="full-width internalPage pageChannel  channel-channelsuggestpage">
   <div class="container">    
     <app-banneraccount></app-banneraccount>
      <div class="vf-allrelated-channels">
