--- a/src/app/modules/channel-info/channel-info.component.html
+++ b/src/app/modules/channel-info/channel-info.component.html
@@ -1,3 +1,31 @@
-<p>
-  channel-info works!
-</p>
+<div class="full-width internalPage pageChannel channel-infopage">
+  <div class="container">    
+    <app-banneraccount></app-banneraccount>
+     <div class="vf-about-channel">
+      <article>
+        <div class="main-info-channel">
+          <p>Bitches in Town (tạm dịch: Những kẻ lắm lời) đàm tiếu về những câu chuyện xoay quanh showbiz Việt. Lần đầu tiên, khán giả mắt thấy tai nghe những câu thoại chân thật và tự nhiên, bộc trực thẳng thắn nhưng không kém phần hài hước - tất tần tật về những gì liên quan đến phim ảnh, âm nhạc, thời trang và thế giới giải trí. </p>  
+
+          <p>3 hosts của chương trình là MC, nhà báo Thùy Minh - người đối thoại trên ghế nóng với nhiều nhân vật đình đám, nhà văn Nguyễn Ngọc Thạch - tác giả có lượng sách tiêu thụ hàng đầu và stylist quen thuộc của những ngôi sao hạng A - Lê Minh Ngọc. Ngoài ra, chương trình còn có sự xuất hiện của một ông Tây mặt luôn đỏ bừng vì giận dữ: Mr. Joe - chàng trai Canada thông minh và lém lỉnh.</p>  
+
+          <p>Bitches in Town sản xuất bởi công ty Monday Morning, show đều đặn xuất hiện trên Youtube vào lúc 14h thứ Sáu hàng tuần.</p>
+        </div>
+
+        <div class="side-info-channel">
+          <p>Đã tham gia 18 thg 2, 2009</p>
+          <p>378.219 lượt xem  •  4.586 lượt theo dõi	</p>
+          <div class="vf-media-social">
+            <p>Liên kết</p>
+            <a href="#"><span class="icon-webs twittericon"></span>Twister</a>
+            <a href="#"><span class="icon-webs googleicon"></span>Google Plus</a>
+            <a href="#"><span class="icon-webs facebookicon"></span>Facebook</a>
+            <a href="#"><span class="icon-webs facebookMessage-icon"></span>Facebook Message</a>
+            <a href="#"><span class="icon-webs instagram-icon"></span>Instagram</a>							
+            <a href="#"><span class="icon-webs pinterest-icon"></span>Pinterest</a>							
+          </div>
+        </div>
+      </article>
+
+     </div>
+  </div>
+</div>
