--- a/src/app/modules/channel-playlists/channel-playlists.component.html
+++ b/src/app/modules/channel-playlists/channel-playlists.component.html
@@ -1,4 +1,4 @@
-<div class="full-width internalPage  channel-allplaylistspage">
+<div class="full-width internalPage pageChannel channel-allplaylistspage">
   <div class="container">    
     <app-banneraccount></app-banneraccount>
     <div class="vf-allcategory-chanel ">
