--- a/src/app/modules/channel-videos/channel-videos.component.html
+++ b/src/app/modules/channel-videos/channel-videos.component.html
@@ -1,4 +1,4 @@
-<div class="full-width internalPage  channel-allvideospage">
+<div class="full-width internalPage pageChannel  channel-allvideospage">
   <div class="container">    
     <app-banneraccount></app-banneraccount>
 
