--- a/src/app/modules/channeldetail/channeldetail.component.html
+++ b/src/app/modules/channeldetail/channeldetail.component.html
@@ -1,4 +1,4 @@
-<div class="full-width internalPage  pagechannel">
+<div class="full-width internalPage pageChannel  pagechannel">
   <div class="container">    
     <app-banneraccount></app-banneraccount>
  
