--- a/src/app/shared/components/items/banneraccount/banneraccount.component.html
+++ b/src/app/shared/components/items/banneraccount/banneraccount.component.html
@@ -70,6 +70,7 @@
     <li><a routerLink="/channel-playlists">Danh sách phát </a></li>
     <li><a routerLink="/channel-channelsuggest">Kênh</a></li>
     <li><a routerLink="/channel-infomation">Giới thiệu </a></li>
+    <li><a routerLink="/channel-search">Search </a></li>
     <li>
       <button><span class="icon-webs searchicon"></span></button>
       <input type="text" name="search_chanlel" placeholder="Bạn muốn tìm gì?">
