--- a/src/assets/css/_customer.scss
+++ b/src/assets/css/_customer.scss
@@ -957,7 +957,57 @@ body > img[width="1"]
 	}
 }
 
+// for channel section
+.pageChannel 
+{
+	padding-top: 0;
+    padding-bottom: 0;
+    background: #f1f3f7;
+	.container
+	{
+		background: #ffffff;
+		border: 1px solid #e5e7ec;
+		border-top: none;
+		border-bottom: none;
+		padding-bottom: 50px;
+	}
 
+	.vf-wraptitle
+	{
+		margin-bottom: 25px;
+		position: $position-relative;
+		h2
+		{
+			@include styleText(#303234, 18px);
+			line-height: 24px;
+			width: calc(100% - 200px);
+			margin-left: 0;
+			font-weight: normal; 
+			a 
+			{
+				@include styleText(#303234, 18px);
+				line-height: 30px;
+			}
+		}
+		.desc 
+		{
+			@include styleText(#707378, 13px);
+			line-height: 20px;
+			width: calc(100% - 200px);
+			margin-left: 0;
+			margin-top: 10px;
+		}
+		.vf-viewall
+		{
+			@include styleText(#707378, 13px);
+			display: $display-inlinebl;
+			position: $position-absolute;
+			right:0;
+			top: 10px;
+		}
+	}
+	
+}
 
 
 
